--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "dbtify",
   "description": "A small tool to replace SQL table references with dbt model refs",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sahilng/dbtify.git"
+  },
   "engines": {
     "vscode": "^1.98.0"
   },
