--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dbtify",
   "displayName": "dbtify",
-  "description": "A small tool to replace SQL table references with dbt model refs",
+  "description": "VSCode extension to replace SQL table references with dbt model refs",
   "version": "0.0.1",
   "repository": {
     "type": "git",
