--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "publisher": "sahilng",
   "name": "dbtify",
   "displayName": "dbtify",
   "description": "VSCode extension to replace SQL table references with dbt model refs",
