--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "displayName": "dbtify",
   "description": "VSCode extension to replace SQL table references with dbt model refs",
   "icon": "ICON.png",
+  "keywords": [
+    "sql",
+    "dbt"
+  ],
   "version": "1.0.2",
   "repository": {
     "type": "git",
